test/fail/redeclaraton.fml
int a = 2
int a = 3.0
